--- a/DetailArtPhotography/style.css
+++ b/DetailArtPhotography/style.css
@@ -1,10 +1,10 @@
-.deatail-photography .deatail-photography_banner {
+.deatail-artphotography .deatail-artphotography_banner {
   width: 100%;
   height: 825px;
   overflow: hidden;
   position: relative;
 }
-.deatail-photography .deatail-photography_banner::before {
+.deatail-artphotography .deatail-artphotography_banner::before {
   content: "";
   position: absolute;
   width: 100%;
@@ -16,25 +16,25 @@
   background: #ffffff;
   opacity: 0.2;
 }
-.deatail-photography .deatail-photography_banner img {
+.deatail-artphotography .deatail-artphotography_banner img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
 /* Deatail menu Start   */
-.deatail-photography .deatail-photography_menu .photography-menu {
+.deatail-artphotography .deatail-artphotography_menu .birthdayphoto-menu {
   margin-top: 60px;
   text-align: center;
 }
-.deatail-photography
-  .deatail-photography_menu
-  .photography-menu
-  .photography-menu_home,
-.deatail-photography
-  .deatail-photography_menu
-  .photography-menu
-  .photography-menu_library {
+.deatail-artphotography
+  .deatail-artphotography_menu
+  .artphotography-menu
+  .artphotography-menu_home,
+.deatail-artphotography
+  .deatail-artphotography_menu
+  .artphotography-menu
+  .artphotography-menu_library {
   margin-right: 8px;
   color: #66602e;
   font-size: 14px;
@@ -44,10 +44,10 @@
   text-decoration: revert;
 }
 
-.deatail-photography
-  .deatail-photography_menu
-  .photography-menu
-  .photography-menu_photography {
+.deatail-artphotography
+  .deatail-artphotography_menu
+  .artphotography-menu
+  .artphotography-menu_artphotography {
   margin-left: 8px;
   font-size: 14px;
   font-family: "Poppins";
@@ -59,11 +59,11 @@
 /* Deatail menu End   */
 
 /* Deatail container Start */
-.deatail-photography .home-deatail_container .deatail-container {
+.deatail-artphotography .home-deatail_container .deatail-container {
   margin-top: 60px;
   overflow: hidden;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_container
   .deatail-container
   .deatail-container_title {
@@ -75,7 +75,7 @@
   line-height: 58pox;
   color: #d98560;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_container
   .deatail-container
   .deatail-container_description {
@@ -89,7 +89,7 @@
   margin-bottom: 32px;
 }
 
-.deatail-photography
+.deatail-artphotography
   .home-deatail_container
   .deatail-container
   .deatail-container_img
@@ -101,7 +101,7 @@
   overflow: hidden;
   margin-bottom: 24px;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_container
   .deatail-container
   .deatail-container_img
@@ -112,7 +112,7 @@
   grid-column-gap: 16px;
   overflow: hidden;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_container
   .deatail-container
   .deatail-container_img
@@ -124,7 +124,7 @@
   grid-column-gap: 16px;
   overflow: hidden;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_container
   .deatail-container
   .deatail-container_img
@@ -134,8 +134,9 @@
   height: 700px;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 16px;
+  overflow: hidden;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_container
   .deatail-container
   .deatail-container_img
@@ -145,8 +146,9 @@
   height: 700px;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 16px;
+  overflow: hidden;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_container
   .deatail-container
   .deatail-container_img
@@ -156,11 +158,12 @@
   height: 700px;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 16px;
+  overflow: hidden;
 }
 /* Deatail container End */
 
 /* Deatail Deatail Relateto Start */
-.deatail-photography .home-deatail_relateto .deatail-relateto_title {
+.deatail-artphotography .home-deatail_relateto .deatail-relateto_title {
   margin: 60px 0px;
   color: #66602e;
   font-family: "Cormorant";
@@ -168,7 +171,7 @@
   font-size: 48px;
   line-height: 58.13px;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_relateto
   .deatail-relateto_slider
   .relateto-slider_item
@@ -180,7 +183,7 @@
   line-height: 36px;
   color: #66602e;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_relateto
   .deatail-relateto_slider
   .relateto-slider_item
@@ -196,12 +199,12 @@
 /* Deatail Deatail Relateto End */
 
 /* Deatail Contact Start */
-.deatail-photography .home-deatail_contact .deatail-contact {
+.deatail-artphotography .home-deatail_contact .deatail-contact {
   margin-top: 60px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_contact
   .deatail-contact
   .deatail-contact_left
@@ -215,7 +218,7 @@
   color: #66602e;
   line-height: 28.8px;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_contact
   .deatail-contact
   .deatail-contact_right {
@@ -223,7 +226,7 @@
   padding: 16px 16px 16px 16px;
   margin-bottom: 60px;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_contact
   .deatail-contact
   .deatail-contact_right
@@ -236,7 +239,7 @@
   line-height: 28px;
   text-align: justify;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_contact
   .deatail-contact
   .deatail-contact_right
@@ -246,7 +249,7 @@
   grid-column-gap: 16px;
   margin-bottom: 16px;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_contact
   .deatail-contact
   .deatail-contact_right
@@ -258,7 +261,7 @@
   outline: none;
   border: 1px solid #dead8d;
 }
-.deatail-photography
+.deatail-artphotography
   .home-deatail_contact
   .deatail-contact
   .deatail-contact_right
