--- a/DetailBaby/style.css
+++ b/DetailBaby/style.css
@@ -82,72 +82,73 @@
 .home-deatailbaby
   .home-deatail_container
   .deatail-container
-  .deatail-container_img
-  .img1 {
-  width: 100%;
-  height: 500px;
-  object-fit: cover;
-  margin-bottom: 24px;
-}
-.home-deatailbaby
-  .home-deatail_container
-  .deatail-container
-  .deatail-container_img
-  .container-img_row2 {
+  .deatail-container_img {
   display: grid;
-  height: 500px;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 16px;
-}
-.home-deatailbaby
-  .home-deatail_container
-  .deatail-container
-  .deatail-container_img
-  .container-img_row2
-  img.img2,
-.home-deatail_container
-  .deatail-container
-  .deatail-container_img
-  .container-img_row2
-  img.img3 {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  grid-row-gap: 24px;
 }
 
 .home-deatailbaby
   .home-deatail_container
   .deatail-container
   .deatail-container_img
-  .container-img_row2
-  img.img2 {
-  grid-column: 1 / 3;
-}
-
-.home-deatailbaby
-  .home-deatail_container
-  .deatail-container
-  .deatail-container_img
-  .container-img_row3 {
-  margin-top: 48px;
-}
-
-.home-deatail_container
-  .deatail-container
-  .deatail-container_img
-  .container-img_row4 {
-  margin-top: 24px;
-  display: grid;
+  > img {
   height: 500px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 16px;
 }
 
 .home-deatailbaby
   .home-deatail_container
   .deatail-container
   .deatail-container_img
-  .container-img_row5 {
+  .img1,
+.home-deatailbaby
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img12,
+.home-deatailbaby
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img23 {
+  grid-column: 1/4;
+}
+
+.home-deatailbaby
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img2,
+.home-deatailbaby
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img13,
+.home-deatailbaby
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img24 {
+  grid-column: 1/3;
+}
+
+.home-deatailbaby
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img4,
+.home-deatailbaby
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img15,
+.home-deatailbaby
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img26 {
+  grid-column: 1/4;
   margin-top: 24px;
 }
 
@@ -155,12 +156,19 @@
   .home-deatail_container
   .deatail-container
   .deatail-container_img
-  .container-img_row6 {
+  .img8,
+.home-deatailbaby
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img19,
+.home-deatailbaby
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img30 {
+  grid-column: 1/4;
   margin-top: 24px;
-  display: grid;
-  height: 500px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 16px;
 }
 
 /* Deatail container End */
@@ -190,7 +198,8 @@
   .home-deatail_relateto
   .deatail-relateto_slider
   .relateto-slider_item
-  .slider-item_seemore a{
+  .slider-item_seemore
+  a {
   font-family: "Poppins";
   font-weight: 300;
   font-size: 16px;
