--- a/DetailMom&Kid/style.css
+++ b/DetailMom&Kid/style.css
@@ -79,92 +79,61 @@
   color: #66602e;
   margin-bottom: 32px;
 }
-.deatail-mom
-  .home-deatail_container
-  .deatail-container
-  .deatail-container_img
-  .container-img_row1 {
-  width: 100%;
-  height: 700px;
-  object-fit: cover;
-  margin-bottom: 24px;
-  overflow: hidden;
-}
-.deatail-mom
-  .home-deatail_container
-  .deatail-container
-  .deatail-container_img
-  .container-img_row2 {
+.deatail-mom .home-deatail_container .deatail-container .deatail-container_img {
   display: grid;
-  height: 500px;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 16px;
-  overflow: hidden;
+  grid-row-gap: 24px;
 }
+
 .deatail-mom
   .home-deatail_container
   .deatail-container
   .deatail-container_img
-  .container-img_row2
-  .img2 {
-  grid-column: 1 / 3;
+  > img {
+  height: 500px;
 }
+
 .deatail-mom
   .home-deatail_container
   .deatail-container
   .deatail-container_img
-  .container-img_row3 {
+  .img1,
+.deatail-mom
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img17 {
+  grid-column: 1/4;
+}
+
+.deatail-mom
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img2,
+.deatail-mom
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img18 {
+  grid-column: 1/3;
+}
+
+.deatail-mom
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img13,
+.deatail-mom
+  .home-deatail_container
+  .deatail-container
+  .deatail-container_img
+  .img29 {
   margin-top: 24px;
-  display: grid;
-  height: 500px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 16px;
+  grid-column: 1/4;
 }
-.deatail-mom
-  .home-deatail_container
-  .deatail-container
-  .deatail-container_img
-  .container-img_row4 {
-  margin-top: 48px;
-  display: grid;
-  height: 500px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 16px;
-}
-.deatail-mom
-  .home-deatail_container
-  .deatail-container
-  .deatail-container_img
-  .container-img_row5 {
-  margin-top: 24px;
-  display: grid;
-  height: 500px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 16px;
-}
-.deatail-mom
-  .home-deatail_container
-  .deatail-container
-  .deatail-container_img
-  .container-img_row6 {
-  width: 100%;
-  height: 700px;
-  object-fit: cover;
-  margin-top: 48px;
-  margin-bottom: 24px;
-  overflow: hidden;
-}
-.deatail-mom
-  .home-deatail_container
-  .deatail-container
-  .deatail-container_img
-  .container-img_row7 {
-  margin-top: 24px;
-  display: grid;
-  height: 500px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 16px;
-}
+
 /* Deatail container End */
 
 /* Deatail Deatail Relateto Start */
@@ -192,7 +161,8 @@
   .home-deatail_relateto
   .deatail-relateto_slider
   .relateto-slider_item
-  .slider-item_seemore a{
+  .slider-item_seemore
+  a {
   font-family: "Poppins";
   font-weight: 300;
   font-size: 16px;
@@ -204,15 +174,11 @@
 
 /* Deatail Contact Start */
 .deatail-mom .home-deatail_contact .deatail-contact {
-    margin-top: 60px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .deatail-mom
-  .home-deatail_contact
-  .deatail-contact
-  .deatail-contact_left
-  p {
+  margin-top: 60px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.deatail-mom .home-deatail_contact .deatail-contact .deatail-contact_left p {
   width: 547px;
   margin: auto;
   font-size: 20px;
@@ -222,10 +188,7 @@
   color: #66602e;
   line-height: 28.8px;
 }
-.deatail-mom
-  .home-deatail_contact
-  .deatail-contact
-  .deatail-contact_right {
+.deatail-mom .home-deatail_contact .deatail-contact .deatail-contact_right {
   border: 15px solid #a2a183;
   padding: 16px 16px 16px 16px;
   margin-bottom: 60px;
@@ -284,4 +247,3 @@
   cursor: pointer;
 }
 /* Deatail Contact End */
-
