--- a/DetailWedding/style.css
+++ b/DetailWedding/style.css
@@ -81,119 +81,60 @@
 .deatail-wedding
   .deatail-wedding_container
   .deatail-container
-  .deatail-container_img
-  .container-img_row1 {
-  width: 100%;
-  height: 700px;
-  object-fit: cover;
-  margin-bottom: 24px;
+  .deatail-container_img {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 16px;
+  grid-row-gap: 24px;
 }
 
 .deatail-wedding
   .deatail-wedding_container
   .deatail-container
   .deatail-container_img
-  .container-img_row2 {
-  width: 100%;
-  height: 700px;
-  object-fit: cover;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 16px;
-  overflow: hidden;
-}
-.deatail-wedding
-  .deatail-wedding_container
-  .deatail-container
-  .deatail-container_img
-  .container-img_row3 {
-  width: 100%;
-  height: 700px;
-  object-fit: cover;
-  margin-bottom: 24px;
-  margin-top: 48px;
-  display: grid;
-  overflow: hidden;
+  > img {
+  height: 500px;
 }
 
 .deatail-wedding
   .deatail-wedding_container
   .deatail-container
   .deatail-container_img
-  .container-img_row4 {
-  width: 100%;
-  height: 700px;
-  object-fit: cover;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 16px;
-  overflow: hidden;
-  margin-bottom: 24px;
-}
+  .img7,
 .deatail-wedding
   .deatail-wedding_container
   .deatail-container
   .deatail-container_img
-  .container-img_row4
-  .img8 {
-  grid-column: 1 / 3;
+  .img23 {
+  margin-top: 24px;
+  grid-column: 1/4;
 }
+
 .deatail-wedding
   .deatail-wedding_container
   .deatail-container
   .deatail-container_img
-  .container-img_row5 {
-  width: 100%;
-  height: 700px;
-  object-fit: cover;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 16px;
-  overflow: hidden;
-}
+  .img8,
 .deatail-wedding
   .deatail-wedding_container
   .deatail-container
   .deatail-container_img
-  .container-img_row5 {
-  width: 100%;
-  height: 700px;
-  object-fit: cover;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 16px;
-  overflow: hidden;
+  .img24 {
+  grid-column: 1/3;
 }
+
 .deatail-wedding
   .deatail-wedding_container
   .deatail-container
   .deatail-container_img
-  .container-img_row6 {
-  width: 100%;
-  height: 700px;
-  object-fit: cover;
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-column-gap: 16px;
-  overflow: hidden;
-  margin-top: 48px;
-  margin-bottom: 24px;
-}
+  .img13,
 .deatail-wedding
   .deatail-wedding_container
   .deatail-container
   .deatail-container_img
-  .container-img_row7 {
-  width: 100%;
-  height: 700px;
-  object-fit: cover;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 16px;
-  overflow: hidden;
+  .img29 {
+  margin-top: 24px;
+  grid-column: 1/4;
 }
 
 /* container End */
